OpenVi 7.0.3 -> OpenVi 7.0.4 (Unreleased): Wed Jan 26 08:37:21 2022
	+ Nothing yet ...

OpenVi 7.0.2 -> OpenVi 7.0.3: Wed Jan 26 08:31:28 2022
	+ GNUmakefile "install" targets now install documentation (man pages)
	+ Remove 'docs/internals/cscope.NOTES' and documentation references
	+ General GNUmakefile, portability, and code readability improvements
	+ Relicense new contributions under the same 3-clause BSD license
	  used by the overall project and update LICENSE file text
	+ Remove unused headers and legacy documentation from the source tree
	+ Add standalone "strip" target to GNUmakefile; strips uninstalled binary
	+ Set visible tab character to '~' and expose option in GNUmakefile
	+ Installed binaries are now prefixed with 'o' (e.g. 'ovi') by default
	+ Explicitly invoke the POSIX-compliant version of the awk utility
	+ Clarify (and simplify) GNUmakefile and build configuration
	+ Update ChangeLog and docs for consistency, fix spelling and other typos
	+ Update LICENSE text

OpenVi 7.0.1 -> OpenVi 7.0.2: Tue Jan 25 13:44:48 2022
	+ Debugging builds now default to compiling with '-Wall -Wextra'
	+ Only pass '-pipe' to the compiler for non-debugging builds
	+ Expand the formatting of the usage help text for readability
	+ Change the DEBUG_VI GNUmakefile flag to simply DEBUG
	+ For debugging builds, document the existence of -T (Trace) in usage
	+ Don't strip the binary by default; add "install-strip" target
	+ Make clean targets more robust; warn if unable to remove 'bin'
	+ Add standard "clean", "distclean", "realclean", "mostlyclean", and
	  "maintainer-clean" targets to GNUmakefile
	+ Increase the default escapetime to 2/10ths of a second
	+ Add OpenBSD-compatible mkstemp function allowing for longer filenames
	+ Silence some potential warnings with explicit casting
	+ Exit with an error when screen is too small for visual mode
	+ Apply Debian's patch to fix backwards sentence moving
	+ Fix horizontal scroll count; patch from Debian