@@ -2534,6 +2534,10 @@ Select an alternate erase algorithm.
 .Nm vi
 only.
 Display an error message for every error.
+.It Cm visibletab Bq off
+.Nm vi
+only.
+Displays tabs visibly while editing.
 .It Cm w300 Bq no default
 .Nm vi
 only.
