@@ -209,15 +209,15 @@ unabbreviate: delete an abbreviation
 Edit options:
 noaltwerase     filec=""        nomodeline      nosearchincr    timeout
 autoindent      flash           noprint=""      nosecure        nottywerase
-autoprint       hardtabs=0      nonumber        shiftwidth=8    noverbose
-noautowrite     noiclower       nooctalr        noshowmatch     warn
-backup=""       noignorecase    open            noshowmode      window=35
-nobeautify      keytime=6       optimize        sidescroll=16   nowindowname
-cedit=""        noleftright     print=""        noslowopen      wraplen=0
-columns=80      lines=36        prompt          nosourceany     wrapmargin=0
-comment         nolisp          readonly        tabstop=8       wrapscan
-noedcompatible  nolist          noredraw        taglength=0     nowriteany
-escapetime=2    lock            remap           tags="tags"
+autoprint       hardtabs=0      nonumber        shiftwidth=8    novisibletab
+noautowrite     noiclower       nooctalr        noshowmatch     noverbose
+backup=""       noignorecase    open            noshowmode      warn
+nobeautify      keytime=6       optimize        sidescroll=16   window=35
+cedit=""        noleftright     print=""        noslowopen      nowindowname
+columns=80      lines=36        prompt          nosourceany     wraplen=0
+comment         nolisp          readonly        tabstop=8       wrapmargin=0
+noedcompatible  nolist          noredraw        taglength=0     wrapscan
+escapetime=2    lock            remap           tags="tags"     nowriteany
 noerrorbells    magic           report=5        term="xterm"
 exrc            matchtime=7     ruler           noterse
 noextended      mesg            scroll=17       notildeop
