@@ -854,7 +854,7 @@ vs_divider(SCR *sp)
 	GS *gp;
 	size_t len;
 
-#define	DIVIDESTR	"+=+=+=+=+=+=+=+"
+#define	DIVIDESTR	"+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+=+"
 	len =
 	    sizeof(DIVIDESTR) - 1 > sp->cols ? sp->cols : sizeof(DIVIDESTR) - 1;
 	gp = sp->gp;
